--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dropbox": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.7.2",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-fields": "^2.0.3",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.5.3",
